2009-10-08  Ethan A Merritt  <merritt@u.washington.edu>

	* FAQ.pdf Makefile.am docs/gnuplot.doc:  Replace outdated FAQ with
	current FAQ.pdf.  Update version numbers in gnuplot.doc.

2009-10-06  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/term.c (term_start_multiplot): Accept an explicit font for
	the multiplot title.

2009-10-06  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/win/winmain.c (MyFPrintF, MyVFPrintF, MyPrintF): Cannot call
	va_list functions twice with the same va_list.  Have to call a
	pair of va_end() and either va_start() or va_copy() in between.

2009-10-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Silence a compiler warning if gdUseFontConfig() is
	defined to be 0.

	* demo/html/webify.pl demo/html/webify_svg.pl demo/html/webify_canvas.pl
	If GNUPLOT_LIB is not defined, set it to ..
	Bug #2868958

2009-10-06  Tatsuro Matsuoka <tmacchant3@yahoo.co.jp>

	* config/makeile.mgw:  Override the -mwindows compilation flag 
	provided by wx-config.

2009-09-17  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm (CANVAS_graphics): Be wary of uninitialized
	global variables when setting up the mouse event handler.

2009-09-16  Benjamin Lindner  <lindnerb@users.sourceforge.net> 

	* term/emf.trm (ENHemf_FLUSH):  Possible fix for the problem of Windows
	utilities not properly displaying files created using enhaced text mode.
	Bug #2744404

2009-09-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/set.c (set_termoptions): Clean up the code for
	'set termoption <foo>', using terminal flags to ensure that a command
	is only sent to terminal types that can handle it.

	* docs/gnuplot.doc term/cairo.trm term/canvas.trm term/cgm.trm
	term/emf.trm term/gd.trm term/pdf.trm term/post.trm term/svg.trm
	term/tgif.trm term/x11.trm docs/gnuplot.doc:
	Add flag to allow "set termopt linewidth <lw>"

2009-09-06  Ethan A Merritt  <merritt@u.washington.edu>
